# AgentServer.rs

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  airship.py  config.yaml  docker-compose.yml  setup.sh
common/: Cargo.toml
config/: rest_config.toml  test.toml
docker/: Dockerfile.graph_processor_worker  Dockerfile.webhook_service
docs/: DEV_GUIDE.md  PROMETHEUS.md  STRUCTURE.md
examples/old/: Cargo.toml  README.md
examples/old/modules/flow/: Cargo.toml  fb.fbs
examples/old/modules/flow/src/: fb_generated.rs  main.rs
examples/old/modules/llm/: Cargo.toml
examples/old/modules/llm/src/: main.rs
examples/old/plugin/: libmy_module.dylib
examples/old/src/: main.rs
infra/docker/: Dockerfile.rest_service  Dockerfile.timer_service  Dockerfile.websocket_service
libs/as-api-server/: Cargo.toml
libs/as-core/: Cargo.toml
libs/as-executor/: Cargo.toml
libs/as-manger/: Cargo.toml
libs/blocks/src/: block.rs
libs/common/: Cargo.toml
libs/db/: Cargo.toml
libs/db/migrations/: 20240914193558_create_projects_table~.sql  20241024132147_create_autogpt_tables.sql
libs/db/src/: connection.rs  lib.rs  pg_repository.rs  repository.rs
libs/db/src/models/: block.rs  mod.rs  model.rs  project.rs  store.rs  user.rs
libs/db/src/queries/: mod.rs  project_queries.rs  store_queries.rs
libs/messaging/: Cargo.toml  README.md
libs/messaging/src/: kafka.rs  lib.rs  pubsub.rs
libs/messaging/src/messages/: example_message.rs  mod.rs
libs/messaging/tests/: kafka_integration_tests.rs
old/: Cargo.toml
old/modules/my_module/: Cargo.toml
old/modules/my_module/src/: lib.rs
services/api/: Cargo.toml
services/api/src/: main.rs  routes.rs
services/api/src/handlers/: project.rs
services/api/src/models/: project.rs
services/graph_processor_worker/: Cargo.toml
services/rest_service/: Cargo.toml
services/rest_service/src/: main.rs  routes.rs  srv_config.rs
services/rest_service/src/handlers/: project.rs
services/rest_service/src/models/: project.rs
services/timer_service/: Cargo.toml
services/webhook_service/: Cargo.toml
services/websocket_service/: Cargo.toml
src/: main.rs
