[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
once_cell = "1.17"
regex = "1.6"
uuid = { version = "1.2", features = ["v4"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "macros"] }
config = "0.14"
async-trait = "0.1"

[features]
default = []
