[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "macros", "bigdecimal"] }
tokio = { version = "1.41.0", features = ["rt", "macros", "tracing"], optional = true }
tracing = "0.1.40"
uuid = { version = "1.11", features = ["serde", "v4"] }


[dev-dependencies]
config = "0.14.1"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing-test = "0.2.5"

[env]
DATABASE_URL = "postgres://postgres:postgres@localhost:5432/postgres"

