[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tracing = "^0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1.4", features = ["full"] }
rdkafka = { version = "^0.36", features = ["cmake-build"] }
uuid = { version = "1.10", features = [ "v4"] }
anyhow = "1.0.89"
bytes = { version = "1.7.1", features = ["serde"] }
bincode = "1.3.3"
