[package]
name = "graph_processor_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.4", features = ["full"] }
axum = "^0.7.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
anyhow = "^1.0"
common = { path = "../../common" }
petgraph = "^0.6"
rayon = "^1.9"
rdkafka = { version = "^0.36", features = ["tokio"] }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
aws-sdk-s3 = { version = "^1.49", features = ["rustls"] }
