[package]
name = "rest_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.4", features = ["full"] }
axum = "^0.7.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
anyhow = "^1.0"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
jsonwebtoken = "^9.3"
redis = { version = "^0.27", features = ["tokio-comp"] }
tower-http = { version = "^0.5.2", features = ["cors", "compression-gzip"] }
db = { path = "../../libs/db" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.38"
uuid = "1.10.0"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
tower = "0.5.1"
