[package]
name = "rest_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.89"
async-trait = "0.1.82"
axum = "^0.7.5"
chrono = "0.4.38"
config = "0.14.0"
db = { path = "../../libs/db" }
jsonwebtoken = "^9.3"
mime = "0.3.17"
redis = { version = "0.27.2", features = ["tokio-comp"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "^1.4", features = ["full", "tracing"] }
tower-http = { version = "^0.5.2", features = ["cors", "compression-gzip"] }
tracing = "^0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = "1.10.0"
metrics = { version = "0.23.0", default-features = false }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
