[package]
name = "webhook_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
common = { path = "../../common" }
rdkafka = { version = "0.29", features = ["tokio"] }
jsonwebtoken = "8.2"
