[package]
name = "webhook_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.4", features = ["full"] }
axum = "^0.7.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
anyhow = "^1.0"
common = { path = "../../common" }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
jsonwebtoken = "^9.3"
redis = { version = "^0.27", features = ["tokio-comp"] }
tower-http = { version = "^0.5.2", features = ["cors"] }